--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,14 @@
   "homepage": "https://github.com/kiefgc/Blata-Ditz-Online-Retail-Store#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.20.0"
+    "mongodb": "^6.20.0",
+    "parser": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
