--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
+    "multer": "^2.0.2",
     "parser": "^0.1.4"
   },
   "devDependencies": {
