--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "multer": "^2.0.2",
-    "parser": "^0.1.4"
+    "parser": "^0.1.4",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
